Fix profile header spacing

--- a/src/components/ProfileHeader/ProfileHeader.module.scss
+++ b/src/components/ProfileHeader/ProfileHeader.module.scss
@@ -22,6 +22,7 @@
     }
 
     @media screen and (min-width: $size-sm) {
+        margin: auto;
         max-width: 14rem;
         width: 30%;
     }
